--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "client.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electronmon ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^10.1.4"
+    "electron": "^10.1.4",
+    "electronmon": "^1.1.2"
   }
 }
