--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^10.1.4",
-    "electronmon": "^1.1.2"
+    "electronmon": "^1.1.2",
+    "jquery": "^3.5.1",
+    "request": "^2.88.2"
   }
 }
